--- a/CB-24-Proyecto-FAB-Frontend/src/components/maintenance/maintenance-menu/maintenance-menu.css
+++ b/CB-24-Proyecto-FAB-Frontend/src/components/maintenance/maintenance-menu/maintenance-menu.css
@@ -36,6 +36,10 @@
     align-items: center;
 }
 
+.maintenance-menu-container h1{
+    text-align: center;
+}
+
 .maintenance-menu-container .back-icon {
     display: flex;
     align-items: center;
@@ -86,8 +90,7 @@
     gap: 6px;
 }
 
-.maintenance-menu-container footer,
-.maintenance-menu-container footer button {
+.maintenance-menu-container footer span {
     display: flex;
     align-items: center;
     gap: 8px;
