--- a/CB-24-Proyecto-FAB-Frontend/src/components/personalInfComponents/PersonalInformation-List.css
+++ b/CB-24-Proyecto-FAB-Frontend/src/components/personalInfComponents/PersonalInformation-List.css
@@ -5,6 +5,7 @@ body {
   max-width: 1200px; /* Establece el ancho máximo deseado */
   margin-left: 450px;
   height: 100vh;
+  background-color: #efefef;
 }
 .title-container {
   display: flex;
@@ -17,16 +18,19 @@ body {
   font-weight: bold;
   margin-right: 20px;
 }
-
+.input-alergia {
+  padding: 10px;
+}
 .personal-container {
-  height: 100%;
-  width: 95%;
+  height: 1700px;
+  width: 1050px;
   border-radius: 10px;
   padding: 15px;
-  background-color: #ffffff;
+  background-color: #efefef;
   color: #000000;
-  margin-top: 30px;
+  margin-top: 1px;
   margin-bottom: 30px;
+  margin-left: -10px;
   justify-content: space-between;
 }
 
@@ -39,9 +43,9 @@ body {
 .input-container {
   display: flex;
   flex-direction: column;
-  width: 1000px;
-  margin-left: 35px;
-  margin-top: 50px;
+  width: 775px;
+  margin-left: 30px;
+  margin-top: 25px;
 }
 
 .input-container input {
@@ -59,6 +63,7 @@ label {
 }
 .label-inf {
   margin-top: 40px;
+  margin-left: -120px;
 }
 
 
@@ -79,23 +84,26 @@ label {
   margin-top: 10px;
   margin-left: 2px
 }
-
+.input-señas{
+  margin-top: -25px;
+}
 .input-domicilio{
   display: flex;
   justify-content: space-between;
-  margin-top: 10px;
-  margin-left: 35px;
-  width: 1000px;
+  margin-top: 5px;
+  margin-left: 10px;
+  width: 740px;
   padding: 8px;
   border: 1px solid black;
   border-radius: 4px;
   font-size: 16px;
 }
-.label-grade{
+.label-grado{
   margin-left: 30px;
+ 
 }
 .label-date{
-  margin-left: 400px;
+  margin-left: 350px;
 }
 
 .additional-inputs div {
@@ -125,15 +133,21 @@ label {
   font-size: 16px;
 }
 .label-ci{
-  margin-left: 335px;
+  margin-left: 290px;
 }
 .input-ci{
-  width: 530px;
+  width: 380px;
   padding: 8px;
   border-radius: 4px;
   border: 1px solid black;
   font-size: 16px;
   margin-left: 45px;
+  transition: box-shadow 0.3s; 
+}
+.input-ci:hover {
+  box-shadow: 0 0 10px #0183ee;
+  border: 1px solid #0868b8;
+
 }
 
 .additional-button {
@@ -150,57 +164,114 @@ label {
   margin-bottom: 20px;
 }
 .inputs-3{
-  width: 1010px;
+  width: 790px;
   display: flex;
   justify-content: space-between;
   margin-left: 35px;
 }
-.input-telefono,
-.input-celular,
+.input-telefono{
+  width: 450px;
+  margin-right: 30px;
+  padding: 10px;
+  border-radius: 4px;
+  border: 1px solid black;
+  font-size: 16px;
+  transition: box-shadow 0.3s; 
+}
+.input-telefono:hover {
+  box-shadow: 0 0 10px #0183ee;
+
+}
+.input-celular{
+  width: 350px;
+  margin-left: -1000px;
+  padding: 10px;
+  border-radius: 4px;
+  border: 1px solid black;
+  font-size: 16px;
+  margin-left: 10px;
+  margin-right: 30px;
+  transition: box-shadow 0.3s; 
+}
+.input-celular:hover {
+  box-shadow: 0 0 10px #0183ee;
+  border: 1px solid #0868b8;
+
+}
 .input-ocupacion {
-  width: calc(33.33% - 20px); 
-  margin-right: 10px;
+  width: 300px;
   padding: 8px;
   border-radius: 4px;
   border: 1px solid black;
   font-size: 16px;
+  transition: box-shadow 0.3s; 
+}
+.input-ocupacion:hover {
+  box-shadow: 0 0 10px #0183ee;
+  border: 1px solid #0868b8;
+
 }
 
-.input-telefono,
-.input-celular {
-  width: calc(50% - 10px); 
-}
 .label-cel{
-  margin-left: 315px;
+  margin-left: 260px;
 }
 .label-ocup{
-  margin-left: 320px;
+  margin-left: 200px;
 }
 .label-rel{
-  margin-left: 214px;
+  margin-left: 180px;
 }
 .label-correo{
-  margin-left: 275px;
+  margin-left: 190px;
+}
+.label-group{
+  margin-top: 25px;
 }
 
-
-.input-grupo-sanguineo,
-.input-religion,
-.input-correo {
-  width: calc(33.33% - 20px); 
-  margin-right: 10px;
+.input-grupo-sanguineo{
+  width: 250px; 
+  margin-right: 5px;
   padding: 8px;
   border-radius: 4px;
   border: 1px solid black;
   font-size: 16px;
+  transition: box-shadow 0.3s; 
+}
+.input-grupo-sanguineo:hover {
+  box-shadow: 0 0 10px #0183ee;
+  border: 1px solid #0868b8;
+
+}
+.input-religion{
+  width: 200px; 
+  margin-right: 5px;
+  padding: 8px;
+  border-radius: 4px;
+  border: 1px solid black;
+  font-size: 16px;
+  transition: box-shadow 0.3s; 
+}
+.input-religion:hover {
+  box-shadow: 0 0 10px #0183ee;
+  border: 1px solid #0868b8;
+
+}
+.input-correo:hover {
+  box-shadow: 0 0 10px #0183ee;
+  border: 1px solid #0868b8;
+
+}
+.input-correo {
+  width: 200px; 
+  margin-right: 5px;
+  padding: 8px;
+  border-radius: 4px;
+  border: 1px solid black;
+  font-size: 16px;
+  transition: box-shadow 0.3s; 
 }
 
-.input-grupo-sanguineo:focus,
-.input-religion:focus,
-.input-correo:focus {
-  outline: none;
-  border-color: #007bff;
-}
+
 .input-container2 {
   display: flex;
   flex-direction: column;
@@ -223,7 +294,7 @@ label {
   align-items: center;
 }
 .label-celular{
-  margin-left: 230px;
+  margin-left: 240px;
 }
 
 .input-container3 input[type="number"] {
@@ -257,20 +328,34 @@ label {
 .input-container5 {
   display: flex;
   align-items: center;
+  margin-bottom: 25px;
   
 }
 .input-date{
   border: 1px solid black;
-  padding: 8px;
+  padding: 10px;
   border-radius: 5px;
   margin-left: 50px;
-  width: 530px;
+  width: 350px;
+  transition: box-shadow 0.3s; 
+}
+.input-date:hover {
+  box-shadow: 0 0 10px #0183ee;
+  border: 1px solid #0868b8;
+
 }
 .input-select{
-  width: 400px;
-  padding: 8px;
+  width: 350px;
+  padding: 10px;
   border: 1px solid black;
   border-radius: 4px;
   font-size: 16px;
-  margin-left: 35px
+  margin-left: 35px;
+  transition: box-shadow 0.3s; 
 }
+.input-select:hover {
+  box-shadow: 0 0 10px #0183ee;
+  border: 1px solid #0868b8;
+
+}
+
